--- a/backend-api/requirements.txt
+++ b/backend-api/requirements.txt
@@ -5,6 +5,7 @@ Flask-RESTful==0.3.9
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+pymongo==3.12.0
 pytz==2021.1
 six==1.16.0
 Werkzeug==2.0.1
